# Esame

./: nmpc_anto.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lidar_node_new/lib/lidar_node_new/: lidar_node_new
install/lidar_node_new/share/ament_index/resource_index/parent_prefix_path/: lidar_node_new
install/lidar_node_new/share/lidar_node_new/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_node_new/share/lidar_node_new/cmake/: lidar_node_newConfig.cmake
install/nmpc_node/lib/nmpc_node/: nmpc_node
install/nmpc_node/share/nmpc_node/: package.sh  package.xml
log/: latest_build
src/lidar_node_new/: CMakeLists.txt
src/lidar_node_new/src/: lidar_node_new.cpp
src/nmpc_node/: package.xml  setup.cfg  setup.py
src/nmpc_node/nmpc_node/: nmpc_diego.py
